syntax = "proto3";
package account;
option go_package = "github.com/nirajgeorgian/account/src/api;api";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.goproto_registration) = true;

import "model.proto";

// create an account
message CreateAccountReq {
  Account account = 1;
}
message CreateAccountRes {
  Account account = 1;
}

// confirming an account
message ConfirmAccountReq {
  string Username = 1;
  string Email = 2;
  string Token = 3;
}
message ConfirmAccountRes {
  bool Success = 1;
}

// read an account
message ReadAccountReq {
  string account_id = 1;
}
message ReadAccountRes {
  Account account = 1;
}

// update an account
message UpdateAccountReq {
  Account account = 1;
}
message UpdateAccountRes {
  bool success = 1;
  Account account = 2;
}

// auth for account
message AuthReq {
  Account account = 1;
}
message AuthRes {
  string token = 1;
  bool valid = 2;
}

// validate username
message ValidateUsernameReq {
  string username = 1;
}
message ValidateUsernameRes {
  bool success = 1;
}

// validate email
message ValidateEmailReq {
  string email = 1;
}
message ValidateEmailRes {
  bool success = 1;
}

// api status
message AccountHealthCheckReq {
  string service = 1;
}

message AccountHealthCheckRes {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}

service AccountService {
  rpc CreateAccount (CreateAccountReq) returns (CreateAccountRes) {};
  rpc ConfirmAccount (ConfirmAccountReq) returns (ConfirmAccountRes) {};
  rpc ReadAccount (ReadAccountReq) returns (ReadAccountRes) {};
  rpc UpdateAccount (UpdateAccountReq) returns (UpdateAccountRes) {};
  rpc Auth(AuthReq) returns (AuthRes) {};
  rpc ValidateUsername(ValidateUsernameReq) returns (ValidateUsernameRes) {};
  rpc ValidateEmail(ValidateEmailReq) returns (ValidateEmailRes) {};
  rpc AccountCheck(AccountHealthCheckReq) returns (AccountHealthCheckRes) {};
}
