syntax = "proto3";
package account;
option go_package = "github.com/nirajgeorgian/account/src/model;model";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";
import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_registration) = true;

message Account {
  option (gorm.opts).ormable = true;

  string account_id = 1 [(gorm.field).tag = { primary_key: true }];
  string username = 2 [(gorm.field).tag = { type: "varchar(120)" }];
  string email = 3 [(gorm.field).tag = { type: "varchar(120)" }];
  string password_hash = 4 [(gorm.field).tag = { type: "varchar(120)" }];
  string password_salt = 5;
  string description = 6 [(gorm.field).tag = { type: "varchar(512)" }];
  string verification_code = 7 [(gorm.field).tag = { type: "varchar(8)" }];
  bool verified = 8 [(gorm.field).tag = { type: "boolean"}];

  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}
